feat(content): add starter notes/projects/technologies with cross-links; fix Pages workflow to rename public/index.xml -> rss.xml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
           cp "$GITHUB_WORKSPACE/quartz.layout.ts" ./
           npx quartz build
           # Avoid content negotiation serving index.xml over index.html on Pages
-          if [ -f index.xml ]; then mv index.xml rss.xml; fi
+          if [ -f public/index.xml ]; then mv public/index.xml public/rss.xml; fi
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
