ci(pages): fix content copy to avoid content/content nesting; create fallback home via here-doc; keep verify step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,21 @@ jobs:
           # copy site content & config from repo
           echo "-- Listing repo content root --"
           ls -la "$GITHUB_WORKSPACE/content" || true
-          cp -r "$GITHUB_WORKSPACE/content" ./content
+          # ensure we don't end up with content/content nesting
+          rm -rf ./content ./static || true
+          mkdir -p content static
+          cp -a "$GITHUB_WORKSPACE/content/." ./content/
           echo "-- Listing build/content after copy --"
           ls -la ./content || true
           # ensure home exists (Quartz warns if missing). Create minimal one if absent.
           if [ ! -f ./content/index.md ]; then
-            printf "---\ntitle: Home\n---\n\nWelcome\n" > ./content/index.md
+            cat > ./content/index.md << 'HOME'
+---
+title: Home
+---
+
+Welcome
+HOME
             echo "Created fallback content/index.md"
           fi
           if [ -d "$GITHUB_WORKSPACE/static" ]; then cp -r "$GITHUB_WORKSPACE/static" ./static; else mkdir -p static; fi
