feat(home+nav): add HomeCards grid on index; tune Breadcrumbs (root '首页') and Explorer (open by default); show ContentMeta; RecentNotes limit=5; copy custom components in CI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,7 @@ jobs:
           if [ -d "$GITHUB_WORKSPACE/static" ]; then cp -r "$GITHUB_WORKSPACE/static" ./static; else mkdir -p static; fi
           cp "$GITHUB_WORKSPACE/quartz.config.ts" ./
           cp "$GITHUB_WORKSPACE/quartz.layout.ts" ./
+          if [ -d "$GITHUB_WORKSPACE/components" ]; then cp -r "$GITHUB_WORKSPACE/components" ./components; fi
           npx quartz build
           # Avoid content negotiation serving index.xml over index.html on Pages
           if [ -f public/index.xml ]; then mv public/index.xml public/rss.xml; fi
